--- a/.env
+++ b/.env
@@ -11,7 +11,17 @@ DATABASE_URL=mysql+pymysql://root:pabbo%40123@localhost:3306/lawvriksh_referral
 # Security
 JWT_SECRET_KEY=your-super-secret-key-here-make-it-long-and-random-for-production-use
 
-# Message Queue
+# Redis Configuration (Local Development - No Password)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_URL=redis://localhost:6379/0
+
+# Celery Configuration (Using Redis)
+CELERY_BROKER_URL=redis://localhost:6379/1
+CELERY_RESULT_BACKEND=redis://localhost:6379/2
+
+# Legacy RabbitMQ (keeping for fallback)
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 
 # Email Configuration
