--- a/.env.production.example
+++ b/.env.production.example
@@ -25,12 +25,24 @@ REDIS_PASSWORD=your_secure_redis_password_here
 # Generate with: python -c "import secrets; print(secrets.token_urlsafe(64))"
 JWT_SECRET_KEY=your_super_secure_jwt_secret_key_here_make_it_very_long_and_random
 
-# Email Configuration
-EMAIL_FROM=info@lawvriksh.com
-SMTP_HOST=smtp.gmail.com
+# Email Configuration (Updated for Integrated Email Processing)
+FROM_EMAIL=info@lawvriksh.com
+FROM_NAME=LawVriksh Platform
+SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
+SMTP_USERNAME=your_email@gmail.com
 SMTP_PASSWORD=your_app_specific_password
+SMTP_USE_TLS=true
+
+# Background Email Processing Configuration
+BACKGROUND_EMAIL_PROCESSING=true
+EMAIL_CHECK_INTERVAL=60
+EMAIL_BATCH_SIZE=100
+
+# Redis Configuration (for caching and sessions)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
 
 # Application Settings
 ENVIRONMENT=production
