--- a/requirements.production.txt
+++ b/requirements.production.txt
@@ -14,11 +14,9 @@ cryptography==41.0.7
 
 # Caching and Storage
 diskcache==5.6.3
-redis==5.0.1
+# redis==5.0.1  # Removed with Celery
 
-# Background Tasks
-celery==5.3.4
-kombu==5.3.4
+# Background Tasks - removed Celery, using database-driven queue
 
 # Configuration and Environment
 python-dotenv==1.0.0
